--- a/index.html
+++ b/index.html
@@ -10,75 +10,80 @@
 <body>
 
     <header>
-		<nav class="top-menu">
-			<ul class="menu-main">
-			  <li class="left-item"><a href="">Гусли в наличии</a></li>
-			
-			  <li class="right-item"><a href="">Контакты </a></li>
-			  
-		  </ul>
-			<a  class="navbar-logo" href="#perehod"><img  src="images/572.gif"> </a>
-			<h1 id="hg">Гусли</h1>
-		  </nav>
-	</header>
+        <nav class="top-menu">
+            <ul class="menu-main">
+                <li class="left-item"><a href="">Гусли в наличии</a></li>
+
+                <li class="right-item"><a href="">Контакты </a></li>
+
+            </ul>
+            <a class="navbar-logo" href="#perehod"><img src="images/572.gif"> </a>
+            <h1 id="hg">Гусли</h1>
+        </nav>
+    </header>
 
 	<article>
-        <p class="cont">Приветствую! Меня зовут Евгений и я занимаюсь изготовлением древнего щипкового музыкального инструмента- Гусли,
-			 в Беларуси. Это инструмент, позволяющий извлекать совершенно гармоничные сочетания звуков с возможностью
-			 заглянуть в далекое прошлое. Мои гусли- это изделия ручной работы, экологичный материал, естественный внешний 
-			 вид, яркое, глубокое природное звучание. Пишите, звоните. Возможна отправка в другие страны!</p><br>
-
-
-
-
-			 <a name="perehod"></a>
-				 <!-- Slideshow container -->
-<div  class="slideshow-container" >
-	
-
-	<!-- Полноразмерные изображения с номером и текстом подписи -->
-	<div  class="mySlides fade">
-	 <!-- <div class="numbertext">1 </div>-->
-	  <img class="foto" src="images/9.jpg" >
-	  <div class="text"></div>
-	</div>
-  
-	<div class="mySlides fade">
-	  <img class="foto" src="images/20.jpg" >
-	  <div class="text"></div>
-	</div>
-  
-	<div class="mySlides fade">
-	  <img class="foto" src="images/47.jpg" >
-	  <div class="text"></div>
-	</div>
-
-	<div class="mySlides fade">
-		<img class="foto" src="images/40.jpg" >
-		<div class="text"></div>
-	  </div>
-  
-	<!-- Next and previous buttons -->
-	<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-	<a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
-  <br>
-  
- 
-			 
+	    <p class="cont">Приветствую! Меня зовут Евгений и я занимаюсь изготовлением древнего щипкового музыкального инструмента- Гусли,
+	        в Беларуси. Это инструмент, позволяющий извлекать совершенно гармоничные сочетания звуков с возможностью
+	        заглянуть в далекое прошлое. Мои гусли- это изделия ручной работы, экологичный материал, естественный внешний
+	        вид, яркое, глубокое природное звучание. Пишите, звоните. Возможна отправка в другие страны!</p><br>
+	    <a name="perehod"></a>
+	    <!-- Slideshow container -->
+	    <div class="slideshow-container">
+	        <!-- Полноразмерные изображения с номером и текстом подписи -->
+	        <div class="mySlides fade">
+	            <!-- <div class="numbertext">1 </div>-->
+	            <img class="foto" src="./images/9.jpg">
+	            <div class="text"></div>
+	        </div>
+	        <div class="mySlides fade">
+	            <img class="foto" src="images/20.jpg">
+	            <div class="text"></div>
+	        </div>
+	        <div class="mySlides fade">
+	            <img class="foto" src="images/47.jpg">
+	            <div class="text"></div>
+	        </div>
+	        <div class="mySlides fade">
+	            <img class="foto" src="images/40.jpg">
+	            <div class="text"></div>
+	        </div>
+	        <!-- Next and previous buttons -->
+	        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+	        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+	    </div>
+	    <br>
 	</article>
-	
-	  
-	  <div>
-		<ul id="images">
-		  <li><img src="images/20.jpg" alt="Picture 1"></li>
-		  <li><img src="images/47.jpg" alt="Picture 2"></li>
-		  <li><img src="images/40.jpg" alt="Picture 3"></li>
+
+	<div>
+		<h2>В наличии</h2>
+		<ul>
+			<li>
+				<ul id="images">
+					<li class="visible"><img src="images/20.jpg" alt="Picture 1"></li>
+					<li class="hide"><img src="images/47.jpg" alt="Picture 2"></li>
+					<li class="hide"><img src="images/40.jpg" alt="Picture 3"></li>
+				</ul>
+			</li>
+			<li>
+				<ul id="images">
+					<li class="visible"><img src="images/20.jpg" alt="Picture 1"></li>
+					<li class="hide"><img src="images/47.jpg" alt="Picture 2"></li>
+					<li class="hide"><img src="images/40.jpg" alt="Picture 3"></li>
+				</ul>
+			</li>
+			<li>
+				<ul id="images">
+					<li class="visible"><img src="images/20.jpg" alt="Picture 1"></li>
+					<li class="hide"><img src="images/47.jpg" alt="Picture 2"></li>
+					<li class="hide"><img src="images/40.jpg" alt="Picture 3"></li>
+				</ul>
+			</li>
 		</ul>
-	  </div>
+	</div>
 	
 	<link href="viewer/viewer.min.css" rel="stylesheet">
-<script defer src="viewer/viewer.min.js"></script>
-<script defer src="1.js"></script>
+	<script defer src="viewer/viewer.min.js"></script>
+	<script defer src="main.js"></script>
 </body>
 </html>
