--- a/index.html
+++ b/index.html
@@ -115,11 +115,20 @@
 	<footer>
 
 	<div id="contacts">	
-		<h2 >Контакты:</h2>
-		<h3> <img class="icon" src="images/tel.png"> +375(29) 777-14-53   (Telegram <img src="images/telegram.png" >) </h3>
-		<h3> <img class="icon" src="images/email1.png"> evgen652@mail.ru</h3>
-		<h3>  <a  href="https://vk.com/f455fr5"> <img class="icon" src="images/vk.png"> ВКонтакте</a> </h3>
-
+		<h2>Контакты:</h2>
+		<h3> 
+			<a class="center" href="tel:+375297771453"><img class="icon" src="images/tel.png">+375(29) 777-14-53</a>
+			<a class="center" href="https://telegram.me/evgeniyk652">(Telegram</span><img src="images/telegram.png"><span>)</a>
+		</h3>
+		<h3> 
+			<img class="icon" src="images/email1.png">
+			<a href="mailto: evgen652@mail.ru">evgen652@mail.ru</a>
+		</h3>
+		<h3> 
+			<a class="center" href="https://vk.com/f455fr5">
+				<img class="icon" src="images/vk.png">ВКонтакте
+			</a>
+		</h3>
     </div>
 
 	
