--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<p class="content">Приветствую! Меня зовут Евгений и я занимаюсь изготовлением древнего щипкового музыкального
 			инструмента- Гусли,
 			в Беларуси. Это инструмент, позволяющий извлекать совершенно гармоничные сочетания звуков с возможностью
-			заглянуть в далекое прошлое. Мои гусли- это изделия ручной работы, экологичный материал, естественный
+			заглянуть в далекое прошлое. Мои гусли: это изделия ручной работы, экологичный материал, естественный
 			внешний
 			вид, яркое, глубокое природное звучание. Пишите, звоните. Возможна отправка в другие страны. Условия
 			доставки и
