--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 			<div class="comment">
 
 				<h2 id="reviews">Отзывы</h2>
-				<p class="text-review">Отзыв можно оставить написав мне в мессенджеры, соц.сети, на e-mail</p>
+				<p class="text-review">Отзыв можно оставить написав мне в мессенджеры, соц. сети, на e-mail.</p>
 
 				<div class="block-reviews">
 					<ul class="images images2">
