--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="Изготовление гуслей, здесь можно приобрести гусли, купить гусли">
+	<meta name="description" content="Изготовление и продажа гуслей, здесь можно приобрести гусли ручной работы по доступной цене.">
 	<meta name="Keywords" content="Гусли, Кантеле, gusli, гусли, купить гусли, заказать гусли, приобрести гусли, гусли 12 струн, 
 	купить гусли недорого, купить гусли дешево, гусли дешево, гусли недорого, купить гусли в Беларуси, купить гусли в России,
 	гусли в Беларуси, гусли в России, купить гусли по выгодной цене, стоимость гуслей, цена гуслей, цена гусли, купить гусли в Минске, 
-	купить гусли Минск, купить гусли в Москве, купить гусли Москва, изготовление гуслей в Беларуси, гусли в Минске">
+	купить гусли Минск, купить гусли в Москве, купить гусли Москва, изготовление гуслей в Беларуси, гусли в Минске, 
+	гусли крыловидные, купить гусли крыловидные, где купить гусли, гусли музыкальный инструмент купить, гусли инструмент купить, 
+	купить гусли цена, купить гусли новые, продажа гуслей">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Гусли</title>
+	<title>Гусли купить, недорого, гусли в Беларуси</title>
 	<link rel="stylesheet" type="text/css" href="./style.css" />
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
@@ -30,7 +32,7 @@
 	</header>
 
 	<article>
-		<a href="#transition"><img id="upimg" src="images/572.gif" alt="Фотогалерея гуслей"> </a>
+		<a href="#myworks"><img id="upimg" src="images/572.gif" alt="Фотогалерея гуслей"> </a>
 
 		<p class="content">Приветствую! Меня зовут Евгений и я занимаюсь изготовлением древнего щипкового музыкального
 			инструмента- Гусли,
@@ -42,7 +44,7 @@
 			оплаты согласовываются индивидуально.</p><br>
 		
 		<!-- Slideshow container -->
-		<div id="transition" class="slideshow-container">
+		<div id="myworks" class="slideshow-container">
 			<!-- Полноразмерные изображения с номером и текстом подписи -->
 			<div class="mySlides fade">
 				<!-- <div class="numbertext">1 </div>-->
