--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	<meta charset="UTF-8">
 	<meta name="description" content="Изготовление и продажа гуслей, здесь можно приобрести гусли ручной работы по доступной цене.">
 	<meta name="Keywords" content="Гусли, Кантеле, gusli, гусли, купить гусли, заказать гусли, приобрести гусли, гусли 12 струн, 
-	купить гусли недорого, купить гусли дешево, гусли дешево, гусли недорого, купить гусли в Беларуси, купить гусли в России,
+	купить гусли недорого, купить гусли дешево, гусли дешево, гусли по выгодной цене, гусли по доступной цена, гусли недорого, 
+	купить гусли в Беларуси, купить гусли в России,гусли ручной работы, музыкальный инструмент гусли, купить гусли 12 струн, гусли 11 струн, 
 	гусли в Беларуси, гусли в России, купить гусли по выгодной цене, стоимость гуслей, цена гуслей, цена гусли, купить гусли в Минске, 
-	купить гусли Минск, купить гусли в Москве, купить гусли Москва, изготовление гуслей в Беларуси, гусли в Минске, 
+	гусли купить Минск, купить гусли в Москве, купить гусли Москва, изготовление гуслей в Беларуси, гусли в Минске, купить гусли 11 струн, 
 	гусли крыловидные, купить гусли крыловидные, где купить гусли, гусли музыкальный инструмент купить, гусли инструмент купить, 
 	купить гусли цена, купить гусли новые, продажа гуслей">
 
@@ -35,13 +36,10 @@
 		<a href="#myworks"><img id="upimg" src="images/572.gif" alt="Фотогалерея гуслей"> </a>
 
 		<p class="content">Приветствую! Меня зовут Евгений и я занимаюсь изготовлением древнего щипкового музыкального
-			инструмента- Гусли,
-			в Беларуси. Это инструмент, позволяющий извлекать совершенно гармоничные сочетания звуков с возможностью
+			инструмента- Гусли, в Беларуси. Это инструмент, позволяющий извлекать совершенно гармоничные сочетания звуков с возможностью
 			заглянуть в далекое прошлое. Мои гусли: это изделия ручной работы, экологичный материал, естественный
-			внешний
-			вид, яркое, глубокое природное звучание. Пишите, звоните. Возможна отправка в другие страны. Условия
-			доставки и
-			оплаты согласовываются индивидуально.</p><br>
+			внешний вид, яркое, глубокое природное звучание. Пишите, звоните. Возможна отправка в другие страны. Условия
+			доставки и оплаты согласовываются индивидуально.</p><br>
 		
 		<!-- Slideshow container -->
 		<div id="myworks" class="slideshow-container">
