fix text add meta ynd

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<title>Гусли купить, недорого, гусли в Беларуси</title>
 	<link rel="stylesheet" type="text/css" href="./style.css" />
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+	<meta name="yandex-verification" content="4ff80869fd518da7" />
 </head>
 
 <body>
