--- a/index.html
+++ b/index.html
@@ -4,17 +4,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="description" content="Изготовление и продажа гуслей, здесь можно приобрести гусли ручной работы по доступной цене.">
-	<meta name="Keywords" content="Гусли, Кантеле, gusli, гусли, купить гусли, заказать гусли, приобрести гусли, гусли 12 струн, 
-	купить гусли недорого, купить гусли дешево, гусли дешево, гусли по выгодной цене, гусли по доступной цена, гусли недорого, 
-	купить гусли в Беларуси, купить гусли в России,гусли ручной работы, музыкальный инструмент гусли, купить гусли 12 струн, гусли 11 струн, 
-	гусли в Беларуси, гусли в России, купить гусли по выгодной цене, стоимость гуслей, цена гуслей, цена гусли, купить гусли в Минске, 
-	гусли купить Минск, купить гусли в Москве, купить гусли Москва, изготовление гуслей в Беларуси, гусли в Минске, купить гусли 11 струн, 
-	гусли крыловидные, купить гусли крыловидные, где купить гусли, гусли музыкальный инструмент купить, гусли инструмент купить, 
-	купить гусли цена, купить гусли новые, продажа гуслей">
-
+	<meta name="keywords" content="гусли, крыловидные, кантеле, 11 струн, gusli, музыкальный инструмент, купить гусли 12 струн, цена, гусли в Беларуси">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Гусли купить, недорого, гусли в Беларуси</title>
+	<title>Гусли купить, недорого, гусли в Беларуси, gusli.ga</title>
 	<link rel="stylesheet" type="text/css" href="./style.css" />
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	<meta name="yandex-verification" content="4ff80869fd518da7" />
