--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="description" content="Изготовление и продажа гуслей, здесь можно приобрести гусли ручной работы по доступной цене.">
-	<meta name="keywords" content="гусли, крыловидные, кантеле, 11 струн, gusli, музыкальный инструмент, купить гусли 12 струн, цена, гусли в Беларуси">
+	<meta name="keywords" content="гусли, крыловидные, кантеле, 11 струн, недорого, музыкальный инструмент, купить гусли 12 струн, цена, гусли в Беларуси">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Гусли купить, недорого, гусли в Беларуси, gusli.ga</title>
