--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Гусли купить, недорого, гусли в Беларуси, gusli.ga</title>
 	<link rel="stylesheet" type="text/css" href="./style.css" />
-	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="./images/favicon.ico" type="image/x-icon">
 	<meta name="yandex-verification" content="4ff80869fd518da7" />
 	<!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
