--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="./style.css" />
 	<link rel="icon" href="./images/favicon.ico" type="image/x-icon">
 	<meta name="yandex-verification" content="4ff80869fd518da7" />
+	<meta name="google-site-verification" content="jnsFx6nk18DhrgKxMlAOeiikxU6iXY-E2Ejbr3YdxCI" />
 	<!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
 	(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
