--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
  </script>
  <noscript><div><img src="https://mc.yandex.ru/watch/87816363" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
  <!-- /Yandex.Metrika counter -->
+
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-755H21E606"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-755H21E606');
+</script>
 </head>
 
 <body>
