--- a/index.html
+++ b/index.html
@@ -53,13 +53,16 @@
 	</header>
 
 	<article>
+
+		<p class="upcontent">gusli.ga здесь можно ознакомиться с инструментами, выбрать или заказать себе гусли. </p>
+
 		<a href="#myworks"><img id="upimg" src="images/572.gif" alt="Фотогалерея гуслей"> </a>
 
 		<p class="content">Приветствую! Меня зовут Евгений и я занимаюсь изготовлением древнего щипкового музыкального
 			инструмента- Гусли, в Беларуси. Это инструмент, позволяющий извлекать совершенно гармоничные сочетания звуков с возможностью
 			заглянуть в далекое прошлое. Мои гусли: это изделия ручной работы, экологичный материал, естественный
 			внешний вид, яркое, глубокое природное звучание. Пишите, звоните. Возможна отправка в другие страны. Условия
-			доставки и оплаты согласовываются индивидуально.</p><br>
+			доставки и оплаты согласовываются индивидуально.</p>
 		
 		<!-- Slideshow container -->
 		<div id="myworks" class="slideshow-container">
@@ -206,7 +209,7 @@
 				<li class="visible"><img src="images/product/5/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/5/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/5/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 5, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 5, 12 струн,<br><span class="prodano">Проданы</span></h2></li>
 			</ul>
 
 			<ul class="images images1">
