--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 	<article>
 
-		<p class="upcontent">gusli.ga здесь можно ознакомиться с инструментами, выбрать или заказать себе гусли. </p>
+		<p class="upcontent">gusli.ga здесь можно ознакомиться с инструментами, выбрать себе гусли. </p>
 
 		<a href="#myworks"><img id="upimg" src="images/572.gif" alt="Фотогалерея гуслей"> </a>
 
