add link target

--- a/index.html
+++ b/index.html
@@ -262,14 +262,14 @@
 					</a>
 				</h3>
 				<h3>
-					<a class="center" href="https://vk.com/f455fr5">
+					<a class="center" href="https://vk.com/f455fr5" target="_blank">
 						<img src="images/vk.png" alt="вконтакте">
 						&nbsp; ВКонтакте
 					</a>
 				</h3>
 
 				<h3>
-					<a class="center" href="https://telegram.me/evgeniyk652"> <img src="images/telegram.png"
+					<a class="center" href="https://telegram.me/evgeniyk652" target="_blank"> <img src="images/telegram.png"
 							alt="telegram">
 						&nbsp; Telegram
 					</a>
