--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="гусли, крыловидные, кантеле, 11 струн, недорого, музыкальный инструмент, купить гусли 12 струн, цена, гусли в Беларуси">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Гусли купить, недорого, гусли в Беларуси, gusli.ga</title>
+	<title>Гусли купить, недорого, гусли из Беларуси, gusli.ga</title>
 	<link rel="stylesheet" type="text/css" href="./style.css" />
 	<link rel="icon" href="./images/favicon.ico" type="image/x-icon">
 	<meta name="yandex-verification" content="4ff80869fd518da7" />
@@ -274,6 +274,14 @@
 						&nbsp; Telegram
 					</a>
 				</h3>
+
+				<h3>
+					<a class="center" href="https://www.instagram.com/evgenii_gusli/" target="_blank"> <img src="images/Instagram.png"
+							alt="Instagram">
+						&nbsp; Instagram
+					</a>
+				</h3>
+
 			</div>
 
 			<div class="comment">
