--- a/index.html
+++ b/index.html
@@ -269,15 +269,15 @@
 				</h3>
 
 				<h3>
-					<a class="center" href="https://telegram.me/evgeniyk652" target="_blank"> <img src="images/telegram.png"
-							alt="telegram">
+					<a class="center" href="https://telegram.me/evgeniyk652" target="_blank">
+						<img src="images/telegram.png" alt="telegram">
 						&nbsp; Telegram
 					</a>
 				</h3>
 
 				<h3>
-					<a class="center" href="https://www.instagram.com/evgenii_gusli/" target="_blank"> <img src="images/Instagram.png"
-							alt="Instagram">
+					<a class="center" href="https://www.instagram.com/evgenii_gusli/" target="_blank">
+						<img src="images/Instagram.png" alt="Instagram">
 						&nbsp; Instagram
 					</a>
 				</h3>
