--- a/index.html
+++ b/index.html
@@ -160,6 +160,14 @@
 				<img class="foto" src="images/myslides/23.jpg" alt="фото-гусли-23">
 				<div class="text"></div>
 			</div>
+			<div class="mySlides fade">
+				<img class="foto" src="images/myslides/24.jpg" alt="фото-гусли-24">
+				<div class="text"></div>
+			</div>
+			<div class="mySlides fade">
+				<img class="foto" src="images/myslides/25.jpg" alt="фото-гусли-25">
+				<div class="text"></div>
+			</div>
 
 			<!-- Next and previous buttons -->
 			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -171,15 +179,7 @@
 		<h1 id="textguslivnal">Гусли в наличии:</h1>
 		<div id="available">
 
-			<ul class="images images1">
-
-
-				<li class="visible"><img src="images/product/1/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/1/2.jpg" alt="Гусли-изображение-2"></li>
-				<li class="hide"><img src="images/product/1/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 1, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
-				
-			</ul>
+			
 
 			<ul class="images images1">
 
@@ -204,13 +204,7 @@
 				<li><h2 class="textproduct">Гусли № 4, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
 			</ul>
 
-			<ul class="images images1">
-
-				<li class="visible"><img src="images/product/5/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/5/2.jpg" alt="Гусли-изображение-2"></li>
-				<li class="hide"><img src="images/product/5/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 5, 12 струн,<br><span class="prodano">Проданы</span></h2></li>
-			</ul>
+			
 
 			<ul class="images images1">
 
@@ -230,15 +224,7 @@
 				<li><h2 class="textproduct">Гусли № 7, 11 струн,<br>цена: 100 Br (бел. руб.)</h2></li>
 			</ul>
 
-			<ul class="images images1">
-
-				<li class="visible"><img src="images/product/8/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/8/2.jpg" alt="Гусли-изображение-2"></li>
-				<li class="hide"><img src="images/product/8/3.jpg" alt="Гусли-изображение-3"></li>
-				<li class="hide"><img src="images/product/8/4.jpg" alt="Гусли-изображение-4"></li>
-				<li class="hide"><img src="images/product/8/5.jpg" alt="Гусли-изображение-5"></li>
-				<li><h2 class="textproduct">Гусли № 8, 12 струн,<br>цена: 120 Br (бел. руб.)</h2></li>
-			</ul>
+			
 		</div>
 
 
