--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
 						<li class="hide"><img src="./images/review/3.jpg" alt="Гусли-отзыв-3"></li>
 						<li class="hide"><img src="./images/review/4.jpg" alt="Гусли-отзыв-4"></li>
 						<li class="hide"><img src="./images/review/5.jpg" alt="Гусли-отзыв-5"></li>
+						<li class="hide"><img src="./images/review/6.jpg" alt="Гусли-отзыв-6"></li>
 					</ul>
 
 				</div>
