--- a/index.html
+++ b/index.html
@@ -227,6 +227,10 @@
 			
 		</div>
 
+		<video  controls preload="metadata"  controlsList="nodownload  nofullscreen ">
+			<source src="./video/gusli.mp4" type="video/mp4">
+		  </video>
+
 
 	</article>
 
