--- a/index.html
+++ b/index.html
@@ -182,7 +182,14 @@
 			
 
 			<ul class="images images1">
+				<li class="visible"><img src="images/product/1/1.jpg" alt="Гусли-изображение-1"></li>
+				<li class="hide"><img src="images/product/1/2.jpg" alt="Гусли-изображение-2"></li>
+				<li class="hide"><img src="images/product/1/3.jpg" alt="Гусли-изображение-3"></li>
+				<li><h2 class="textproduct">Гусли № 1, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+			</ul>
 
+
+			<ul class="images images1">
 				<li class="visible"><img src="images/product/2/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/2/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/2/3.jpg" alt="Гусли-изображение-3"></li>
@@ -190,7 +197,6 @@
 			</ul>
 
 			<ul class="images images1">
-
 				<li class="visible"><img src="images/product/3/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/3/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/3/3.jpg" alt="Гусли-изображение-3"></li>
@@ -198,16 +204,21 @@
 			</ul>
 
 			<ul class="images images1">
-
 				<li class="visible"><img src="images/product/4/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/4/2.jpg" alt="Гусли-изображение-2"></li>
 				<li><h2 class="textproduct">Гусли № 4, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
 			</ul>
 
 			
+			<ul class="images images1">
+				<li class="visible"><img src="images/product/5/1.jpg" alt="Гусли-изображение-1"></li>
+				<li class="hide"><img src="images/product/5/2.jpg" alt="Гусли-изображение-2"></li>
+				<li class="hide"><img src="images/product/5/3.jpg" alt="Гусли-изображение-3"></li>
+				<li><h2 class="textproduct">Гусли № 5, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+			</ul>
+
 
 			<ul class="images images1">
-
 				<li class="visible"><img src="images/product/6/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/6/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/6/3.jpg" alt="Гусли-изображение-3"></li>
@@ -215,13 +226,30 @@
 			</ul>
 
 			<ul class="images images1">
-
 				<li class="visible"><img src="images/product/7/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/7/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/7/3.jpg" alt="Гусли-изображение-3"></li>
 				<li class="hide"><img src="images/product/7/4.jpg" alt="Гусли-изображение-4"></li>
 				<li class="hide"><img src="images/product/7/5.jpg" alt="Гусли-изображение-5"></li>
 				<li><h2 class="textproduct">Гусли № 7, 11 струн,<br>цена: 125 Br (бел. руб.)</h2></li>
+			</ul>
+
+
+			<ul class="images images1">
+				<li class="visible"><img src="images/product/8/1.jpg" alt="Гусли-изображение-1"></li>
+				<li class="hide"><img src="images/product/8/2.jpg" alt="Гусли-изображение-2"></li>
+				<li class="hide"><img src="images/product/8/3.jpg" alt="Гусли-изображение-3"></li>
+				<li class="hide"><img src="images/product/8/4.jpg" alt="Гусли-изображение-4"></li>
+				<li><h2 class="textproduct">Гусли № 8, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+			</ul>
+
+
+			<ul class="images images1">
+				<li class="visible"><img src="images/product/9/1.jpg" alt="Гусли-изображение-1"></li>
+				<li class="hide"><img src="images/product/9/2.jpg" alt="Гусли-изображение-2"></li>
+				<li class="hide"><img src="images/product/9/3.jpg" alt="Гусли-изображение-3"></li>
+				<li class="hide"><img src="images/product/9/4.jpg" alt="Гусли-изображение-4"></li>
+				<li><h2 class="textproduct">Гусли № 9, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
 			</ul>
 
 			
