--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 				<li class="visible"><img src="images/product/1/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/1/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/1/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 1, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 1, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
 
 
@@ -193,20 +193,20 @@
 				<li class="visible"><img src="images/product/2/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/2/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/2/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 2, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 2, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
 
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/3/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/3/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/3/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 3, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 3, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
 
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/4/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/4/2.jpg" alt="Гусли-изображение-2"></li>
-				<li><h2 class="textproduct">Гусли № 4, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 4, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
 
 			
@@ -214,16 +214,10 @@
 				<li class="visible"><img src="images/product/5/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/5/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/5/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 5, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 5, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
 
 
-			<ul class="images images1">
-				<li class="visible"><img src="images/product/6/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/6/2.jpg" alt="Гусли-изображение-2"></li>
-				<li class="hide"><img src="images/product/6/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 6, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
-			</ul>
 
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/7/1.jpg" alt="Гусли-изображение-1"></li>
@@ -231,7 +225,7 @@
 				<li class="hide"><img src="images/product/7/3.jpg" alt="Гусли-изображение-3"></li>
 				<li class="hide"><img src="images/product/7/4.jpg" alt="Гусли-изображение-4"></li>
 				<li class="hide"><img src="images/product/7/5.jpg" alt="Гусли-изображение-5"></li>
-				<li><h2 class="textproduct">Гусли № 7, 11 струн,<br>цена: 125 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 7, 11 струн,<br>цена: 130 Br (бел. руб.)</h2></li>
 			</ul>
 
 
@@ -240,7 +234,7 @@
 				<li class="hide"><img src="images/product/8/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/8/3.jpg" alt="Гусли-изображение-3"></li>
 				<li class="hide"><img src="images/product/8/4.jpg" alt="Гусли-изображение-4"></li>
-				<li><h2 class="textproduct">Гусли № 8, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 8, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
 
 
@@ -249,7 +243,7 @@
 				<li class="hide"><img src="images/product/9/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/9/3.jpg" alt="Гусли-изображение-3"></li>
 				<li class="hide"><img src="images/product/9/4.jpg" alt="Гусли-изображение-4"></li>
-				<li><h2 class="textproduct">Гусли № 9, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 9, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
 
 			
@@ -316,6 +310,7 @@
 						<li class="hide"><img src="./images/review/4.jpg" alt="Гусли-отзыв-4"></li>
 						<li class="hide"><img src="./images/review/5.jpg" alt="Гусли-отзыв-5"></li>
 						<li class="hide"><img src="./images/review/6.jpg" alt="Гусли-отзыв-6"></li>
+						<li class="hide"><img src="./images/review/7.jpg" alt="Гусли-отзыв-7"></li>
 					</ul>
 
 				</div>
