--- a/index.html
+++ b/index.html
@@ -191,28 +191,28 @@
 
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/2/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/2/2.jpg" alt="Гусли-изображение-2"></li>
+				<!-- <li class="hide"><img src="images/product/2/2.jpg" alt="Гусли-изображение-2"></li> -->
 				<li class="hide"><img src="images/product/2/3.jpg" alt="Гусли-изображение-3"></li>
 				<li><h2 class="textproduct">Гусли № 2, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
 
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/3/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/3/2.jpg" alt="Гусли-изображение-2"></li>
+				<!-- <li class="hide"><img src="images/product/3/2.jpg" alt="Гусли-изображение-2"></li> -->
 				<li class="hide"><img src="images/product/3/3.jpg" alt="Гусли-изображение-3"></li>
 				<li><h2 class="textproduct">Гусли № 3, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
 
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/4/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/4/2.jpg" alt="Гусли-изображение-2"></li>
+				<!-- <li class="hide"><img src="images/product/4/2.jpg" alt="Гусли-изображение-2"></li> -->
 				<li><h2 class="textproduct">Гусли № 4, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
 
 			
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/5/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/5/2.jpg" alt="Гусли-изображение-2"></li>
+				<!-- <li class="hide"><img src="images/product/5/2.jpg" alt="Гусли-изображение-2"></li> -->
 				<li class="hide"><img src="images/product/5/3.jpg" alt="Гусли-изображение-3"></li>
 				<li><h2 class="textproduct">Гусли № 5, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
@@ -222,7 +222,7 @@
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/7/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/7/2.jpg" alt="Гусли-изображение-2"></li>
-				<li class="hide"><img src="images/product/7/3.jpg" alt="Гусли-изображение-3"></li>
+				<!-- <li class="hide"><img src="images/product/7/3.jpg" alt="Гусли-изображение-3"></li> -->
 				<li><h2 class="textproduct">Гусли № 7, 11 струн,<br>цена: 130 Br (бел. руб.)</h2></li>
 			</ul>
 
@@ -230,7 +230,7 @@
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/8/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/8/2.jpg" alt="Гусли-изображение-2"></li>
-				<li class="hide"><img src="images/product/8/3.jpg" alt="Гусли-изображение-3"></li>
+				<!-- <li class="hide"><img src="images/product/8/3.jpg" alt="Гусли-изображение-3"></li> -->
 				<li class="hide"><img src="images/product/8/4.jpg" alt="Гусли-изображение-4"></li>
 				<li><h2 class="textproduct">Гусли № 8, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
@@ -240,7 +240,7 @@
 				<li class="visible"><img src="images/product/9/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/9/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/9/3.jpg" alt="Гусли-изображение-3"></li>
-				<li class="hide"><img src="images/product/9/4.jpg" alt="Гусли-изображение-4"></li>
+				<!-- <li class="hide"><img src="images/product/9/4.jpg" alt="Гусли-изображение-4"></li> -->
 				<li><h2 class="textproduct">Гусли № 9, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
 
