--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/1/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/1/2.jpg" alt="Гусли-изображение-2"></li>
-				<li class="hide"><img src="images/product/1/3.jpg" alt="Гусли-изображение-3"></li>
+				<!-- <li class="hide"><img src="images/product/1/3.jpg" alt="Гусли-изображение-3"></li> -->
 				<li><h2 class="textproduct">Гусли № 1, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
 
