--- a/index.html
+++ b/index.html
@@ -168,6 +168,10 @@
 				<img class="foto" src="images/myslides/25.jpg" alt="фото-гусли-25">
 				<div class="text"></div>
 			</div>
+			<div class="mySlides fade">
+				<img class="foto" src="images/myslides/26.jpg" alt="фото-гусли-26">
+				<div class="text"></div>
+			</div>
 
 			<!-- Next and previous buttons -->
 			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -198,14 +202,15 @@
 
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/3/1.jpg" alt="Гусли-изображение-1"></li>
-				<!-- <li class="hide"><img src="images/product/3/2.jpg" alt="Гусли-изображение-2"></li> -->
+				<li class="hide"><img src="images/product/3/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/3/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 3, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 3, 11 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
 
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/4/1.jpg" alt="Гусли-изображение-1"></li>
-				<!-- <li class="hide"><img src="images/product/4/2.jpg" alt="Гусли-изображение-2"></li> -->
+				<li class="hide"><img src="images/product/4/2.jpg" alt="Гусли-изображение-2"></li>
+				<li class="hide"><img src="images/product/4/3.jpg" alt="Гусли-изображение-3"></li>
 				<li><h2 class="textproduct">Гусли № 4, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
 
@@ -217,6 +222,13 @@
 				<li><h2 class="textproduct">Гусли № 5, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
 
+
+			<ul class="images images1">
+				<li class="visible"><img src="images/product/6/1.jpg" alt="Гусли-изображение-1"></li>
+				<li class="hide"><img src="images/product/6/2.jpg" alt="Гусли-изображение-2"></li>
+				<li class="hide"><img src="images/product/6/3.jpg" alt="Гусли-изображение-3"></li>
+				<li><h2 class="textproduct">Гусли № 6, 11 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
+			</ul>
 
 
 			<ul class="images images1">
@@ -242,6 +254,31 @@
 				<li class="hide"><img src="images/product/9/3.jpg" alt="Гусли-изображение-3"></li>
 				<!-- <li class="hide"><img src="images/product/9/4.jpg" alt="Гусли-изображение-4"></li> -->
 				<li><h2 class="textproduct">Гусли № 9, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
+			</ul>
+
+
+			<ul class="images images1">
+				<li class="visible"><img src="images/product/10/1.jpg" alt="Гусли-изображение-1"></li>
+				<li class="hide"><img src="images/product/10/2.jpg" alt="Гусли-изображение-2"></li>
+				<li class="hide"><img src="images/product/10/3.jpg" alt="Гусли-изображение-3"></li>
+				<li><h2 class="textproduct">Гусли № 10, 11 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
+			</ul>
+
+
+			<ul class="images images1">
+				<li class="visible"><img src="images/product/11/1.jpg" alt="Гусли-изображение-1"></li>
+				<li class="hide"><img src="images/product/11/2.jpg" alt="Гусли-изображение-2"></li>
+				<li class="hide"><img src="images/product/11/3.jpg" alt="Гусли-изображение-3"></li>
+				<li class="hide"><img src="images/product/11/4.jpg" alt="Гусли-изображение-4"></li>
+				<li><h2 class="textproduct">Гусли № 11, 11 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
+			</ul>
+
+
+			<ul class="images images1">
+				<li class="visible"><img src="images/product/12/1.jpg" alt="Гусли-изображение-1"></li>
+				<li class="hide"><img src="images/product/12/2.jpg" alt="Гусли-изображение-2"></li>
+				<li class="hide"><img src="images/product/12/3.jpg" alt="Гусли-изображение-3"></li>
+				<li><h2 class="textproduct">Гусли № 12, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
 			</ul>
 
 			
