--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 		</nav>
 
 	</header>
-
-	<article>
+	
+	<main>
 
 		<p class="upcontent">gusli.ga здесь можно ознакомиться с инструментами, выбрать себе гусли. </p>
 
@@ -289,7 +289,7 @@
 		  </video>
 
 
-	</article>
+	</main>
 
 
 	<footer>
