--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 				<li class="visible"><img src="images/product/1/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/1/2.jpg" alt="Гусли-изображение-2"></li>
 				<!-- <li class="hide"><img src="images/product/1/3.jpg" alt="Гусли-изображение-3"></li> -->
-				<li><h2 class="textproduct">Гусли № 1, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 1, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
 			</ul>
 
 
@@ -197,21 +197,21 @@
 				<li class="visible"><img src="images/product/2/1.jpg" alt="Гусли-изображение-1"></li>
 				<!-- <li class="hide"><img src="images/product/2/2.jpg" alt="Гусли-изображение-2"></li> -->
 				<li class="hide"><img src="images/product/2/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 2, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 2, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
 			</ul>
 
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/3/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/3/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/3/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 3, 11 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 3, 11 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
 			</ul>
 
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/4/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/4/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/4/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 4, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 4, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
 			</ul>
 
 			
@@ -219,7 +219,7 @@
 				<li class="visible"><img src="images/product/5/1.jpg" alt="Гусли-изображение-1"></li>
 				<!-- <li class="hide"><img src="images/product/5/2.jpg" alt="Гусли-изображение-2"></li> -->
 				<li class="hide"><img src="images/product/5/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 5, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 5, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
 			</ul>
 
 
@@ -227,16 +227,16 @@
 				<li class="visible"><img src="images/product/6/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/6/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/6/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 6, 11 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 6, 11 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
 			</ul>
 
 
-			<ul class="images images1">
+		<!-- 	<ul class="images images1">
 				<li class="visible"><img src="images/product/7/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/7/2.jpg" alt="Гусли-изображение-2"></li>
-				<!-- <li class="hide"><img src="images/product/7/3.jpg" alt="Гусли-изображение-3"></li> -->
+				<li class="hide"><img src="images/product/7/3.jpg" alt="Гусли-изображение-3"></li>
 				<li><h2 class="textproduct">Гусли № 7, 11 струн,<br>цена: 130 Br (бел. руб.)</h2></li>
-			</ul>
+			</ul> -->
 
 
 			<ul class="images images1">
@@ -244,7 +244,7 @@
 				<li class="hide"><img src="images/product/8/2.jpg" alt="Гусли-изображение-2"></li>
 				<!-- <li class="hide"><img src="images/product/8/3.jpg" alt="Гусли-изображение-3"></li> -->
 				<li class="hide"><img src="images/product/8/4.jpg" alt="Гусли-изображение-4"></li>
-				<li><h2 class="textproduct">Гусли № 8, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 8, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
 			</ul>
 
 
@@ -253,7 +253,7 @@
 				<li class="hide"><img src="images/product/9/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/9/3.jpg" alt="Гусли-изображение-3"></li>
 				<!-- <li class="hide"><img src="images/product/9/4.jpg" alt="Гусли-изображение-4"></li> -->
-				<li><h2 class="textproduct">Гусли № 9, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 9, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
 			</ul>
 
 
@@ -261,7 +261,7 @@
 				<li class="visible"><img src="images/product/10/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/10/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/10/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 10, 11 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 10, 11 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
 			</ul>
 
 
@@ -270,7 +270,7 @@
 				<li class="hide"><img src="images/product/11/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/11/3.jpg" alt="Гусли-изображение-3"></li>
 				<li class="hide"><img src="images/product/11/4.jpg" alt="Гусли-изображение-4"></li>
-				<li><h2 class="textproduct">Гусли № 11, 11 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 11, 11 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
 			</ul>
 
 
@@ -278,7 +278,7 @@
 				<li class="visible"><img src="images/product/12/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/12/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/12/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 12, 12 струн,<br>цена: 165 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 12, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
 			</ul>
 
 			
