--- a/index.html
+++ b/index.html
@@ -289,26 +289,17 @@
 
 			<div id="contacts">
 				<h2 id="contactsjump">Контакты:</h2>
-				<h3>
-					<a class="center" href="tel:+375297771453"><img src="images/tel.png" alt="телефон">
-						&nbsp; +375(29) 777-14-53</a>
-				</h3>
-				<h3>
 
+				<h3>
 					<a class="center" href="mailto:evgen652@mail.ru">
 						<img src="images/email1.png" alt="email">
 						&nbsp; evgen652@mail.ru
 					</a>
 				</h3>
-				<h3>
-					<a class="center" href="https://vk.com/f455fr5" target="_blank">
-						<img src="images/vk.png" alt="вконтакте">
-						&nbsp; ВКонтакте
-					</a>
-				</h3>
+			
 
 				<h3>
-					<a class="center" href="https://telegram.me/evgeniyk652" target="_blank">
+					<a class="center" href="https://telegram.me/Oxonomy2" target="_blank">
 						<img src="images/telegram.png" alt="telegram">
 						&nbsp; Telegram
 					</a>
@@ -344,7 +335,7 @@
 			</div>
 		</div>
 
-		<div class="footer-date">Copyright © 2022 | Ремесленник Каханович Евгений Иванович</div>
+		<div class="footer-date">Copyright © 2022</div>
 
 	</footer>
 
