--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 	<header>
 		<nav>
 			<ul class="menu-main">
+				<li><a href="./pages/info/info.html">О гуслях</a></li>
 				<li><a href="#textguslivnal">Гусли в наличии</a></li>
 				<li><a href="#contactsjump">Контакты</a></li>
 				<li><a href="#reviews">Отзывы</a></li>
