--- a/index.html
+++ b/index.html
@@ -173,6 +173,14 @@
 				<img class="foto" src="images/myslides/26.jpg" alt="фото-гусли-26">
 				<div class="text"></div>
 			</div>
+			<div class="mySlides fade">
+				<img class="foto" src="images/myslides/27.jpg" alt="фото-гусли-27">
+				<div class="text"></div>
+			</div>
+			<div class="mySlides fade">
+				<img class="foto" src="images/myslides/28.jpg" alt="фото-гусли-28">
+				<div class="text"></div>
+			</div>
 
 			<!-- Next and previous buttons -->
 			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -184,15 +192,6 @@
 		<h1 id="textguslivnal">Гусли в наличии:</h1>
 		<div id="available">
 
-			
-
-			<ul class="images images1">
-				<li class="visible"><img src="images/product/1/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/1/2.jpg" alt="Гусли-изображение-2"></li>
-				<!-- <li class="hide"><img src="images/product/1/3.jpg" alt="Гусли-изображение-3"></li> -->
-				<li><h2 class="textproduct">Гусли № 1, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
-			</ul>
-
 
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/2/1.jpg" alt="Гусли-изображение-1"></li>
@@ -201,12 +200,6 @@
 				<li><h2 class="textproduct">Гусли № 2, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
 			</ul>
 
-			<ul class="images images1">
-				<li class="visible"><img src="images/product/3/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/3/2.jpg" alt="Гусли-изображение-2"></li>
-				<li class="hide"><img src="images/product/3/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 3, 11 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
-			</ul>
 
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/4/1.jpg" alt="Гусли-изображение-1"></li>
