--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@
 				<img class="foto" src="images/myslides/28.jpg" alt="фото-гусли-28">
 				<div class="text"></div>
 			</div>
+			<div class="mySlides fade">
+				<img class="foto" src="images/myslides/29.jpg" alt="фото-гусли-29">
+				<div class="text"></div>
+			</div>
 
 			<!-- Next and previous buttons -->
 			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -222,15 +226,6 @@
 				<li class="hide"><img src="images/product/6/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/6/3.jpg" alt="Гусли-изображение-3"></li>
 				<li><h2 class="textproduct">Гусли № 6, 11 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
-			</ul>
-
-
-			<ul class="images images1">
-				<li class="visible"><img src="images/product/8/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/8/2.jpg" alt="Гусли-изображение-2"></li>
-				<!-- <li class="hide"><img src="images/product/8/3.jpg" alt="Гусли-изображение-3"></li> -->
-				<li class="hide"><img src="images/product/8/4.jpg" alt="Гусли-изображение-4"></li>
-				<li><h2 class="textproduct">Гусли № 8, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
 			</ul>
 
 
@@ -323,6 +318,8 @@
 						<li class="hide"><img src="./images/review/5.jpg" alt="Гусли-отзыв-5"></li>
 						<li class="hide"><img src="./images/review/6.jpg" alt="Гусли-отзыв-6"></li>
 						<li class="hide"><img src="./images/review/7.jpg" alt="Гусли-отзыв-7"></li>
+						<li class="hide"><img src="./images/review/8.jpg" alt="Гусли-отзыв-8"></li>
+						<li class="hide"><img src="./images/review/9.jpg" alt="Гусли-отзыв-9"></li>
 					</ul>
 
 				</div>
