--- a/index.html
+++ b/index.html
@@ -193,6 +193,10 @@
 				<img class="foto" src="images/myslides/31.jpg" alt="фото-гусли-31">
 				<div class="text"></div>
 			</div>
+			<div class="mySlides fade">
+				<img class="foto" src="images/myslides/32.jpg" alt="фото-гусли-32">
+				<div class="text"></div>
+			</div>
 
 			<!-- Next and previous buttons -->
 			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -226,15 +230,6 @@
 				<!-- <li class="hide"><img src="images/product/5/2.jpg" alt="Гусли-изображение-2"></li> -->
 				<li class="hide"><img src="images/product/5/3.jpg" alt="Гусли-изображение-3"></li>
 				<li><h2 class="textproduct">Гусли № 5, 12 струн,<br>цена: 185 BYN (75 USD)</h2></li>
-			</ul>
-
-
-			<ul class="images images1">
-				<li class="visible"><img src="images/product/9/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/9/2.jpg" alt="Гусли-изображение-2"></li>
-				<li class="hide"><img src="images/product/9/3.jpg" alt="Гусли-изображение-3"></li>
-				<!-- <li class="hide"><img src="images/product/9/4.jpg" alt="Гусли-изображение-4"></li> -->
-				<li><h2 class="textproduct">Гусли № 9, 12 струн,<br>цена: 185 BYN (75 USD)</h2></li>
 			</ul>
 
 
@@ -318,6 +313,7 @@
 						<li class="hide"><img src="./images/review/8.jpg" alt="Гусли-отзыв-8"></li>
 						<li class="hide"><img src="./images/review/9.jpg" alt="Гусли-отзыв-9"></li>
 						<li class="hide"><img src="./images/review/10.jpg" alt="Гусли-отзыв-10"></li>
+						<li class="hide"><img src="./images/review/11.jpg" alt="Гусли-отзыв-11"></li>
 					</ul>
 
 				</div>
