--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="Изготовление и продажа гуслей, здесь можно приобрести гусли крыловидные ручной работы по доступной цене.Беларусь">
-	<meta name="keywords" content="гусли, крыловидные, кантеле, 11 струн, недорого, музыкальный инструмент, купить гусли 12 струн, цена, гусли в Беларуси">
+	<meta name="description" content="Изготовление и продажа гуслей, здесь можно приобрести гусли крыловидные ручной работы по доступной цене. Россия, Беларусь. Гусли музыкальный инструмент, какие гусли, гусли музыка, играющие народные гусли">
+	<meta name="keywords" content="гусли, крыловидные, кантеле, 11 струн, недорого, музыкальный инструмент старинный, струнные гусли, купить гусли 12 струн, гусли музыка, цена, гусли в Беларуси, России">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Гусли купить, недорого, гусли из Беларуси, gusli.ga</title>
+	<title>Гусли купить, недорого, гусли инструмент, гусли музыкальный, старинный струнный инструмент, гусли из Беларуси, гусли музыка, гусли слушать, играющие гусли, народные гусли.</title>
 	<link rel="stylesheet" type="text/css" href="./style.css" />
 	<link rel="icon" href="./images/favicon.ico" type="image/x-icon">
 	<meta name="yandex-verification" content="4ff80869fd518da7" />
@@ -55,11 +55,11 @@
 	
 	<main>
 
-		<p class="upcontent">gusli.ga здесь можно ознакомиться с инструментами, выбрать себе гусли. </p>
+		<p class="upcontent">gusli.ga здесь можно ознакомиться с инструментами, какие гусли выбрать себе. </p>
 
 		<a href="#myworks"><img id="upimg" src="images/572.png" alt="Фотогалерея гуслей"> </a>
 
-		<p class="content">Приветствую! Меня зовут Евгений и я занимаюсь изготовлением древнего щипкового музыкального
+		<p class="content">Приветствую! Меня зовут Евгений и я занимаюсь изготовлением старинного щипкового музыкального
 			инструмента- Гусли, в Беларуси. Это инструмент, позволяющий извлекать совершенно гармоничные сочетания звуков с возможностью
 			заглянуть в далекое прошлое. Мои гусли: это изделия ручной работы, экологичный материал, естественный
 			внешний вид, яркое, глубокое природное звучание. Пишите, звоните. Возможна отправка в другие страны. Условия
@@ -248,13 +248,15 @@
 				<li class="hide"><img src="images/product/12/3.jpg" alt="Гусли-изображение-3"></li>
 				<li><h2 class="textproduct">Гусли № 12, 12 струн,<br>цена: 175 BYN (65 USD)</h2></li>
 			</ul>
-
-			
 		</div>
 
-		<video  controls preload="metadata"  controlsList="nodownload  nofullscreen ">
-			<source src="./video/gusli.mp4" type="video/mp4">
-		  </video>
+		<div class="video-block">
+			<h2 class="video-title">Гусли слушать, звучание гуслей</h2>
+			<video  controls preload="metadata"  controlsList="nodownload  nofullscreen ">
+				<source src="./video/gusli.mp4" type="video/mp4">
+			  </video>
+		</div>
+
 
 
 	</main>
