--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
 				<h3>
 					<a class="center" href="mailto:evgen652@mail.ru">
-						<img src="images/email1.png" alt="email">
+						<img class="contacts-icon-img" src="images/email1.png" alt="email">
 						&nbsp; evgen652@mail.ru
 					</a>
 				</h3>
@@ -278,20 +278,21 @@
 
 				<h3>
 					<a class="center" href="https://telegram.me/Oxonomy2" target="_blank">
-						<img src="images/telegram.png" alt="telegram">
+						<img class="contacts-icon-img" src="images/telegram.png" alt="telegram">
 						&nbsp; Telegram
 					</a>
 				</h3>
 
 				<h3>
 					<a class="center" href="https://www.instagram.com/evgenii_gusli/" target="_blank">
-						<img src="images/Instagram.png" alt="Instagram">
+						<img class="contacts-icon-img" src="images/Instagram.png" alt="Instagram">
 						&nbsp; Instagram
 					</a>
 				</h3>
 
 				<h3>
-					<a class="center" href="tel:+375297771453"><img src="images/tel.png" alt="телефон">
+					<a class="center" href="tel:+375297771453">
+						<img class="contacts-icon-img" src="images/tel.png" alt="телефон">
 						&nbsp; +375(29)777-14-53</a>
 				</h3>
 
