--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="гусли, крыловидные, кантеле, 11 струн, недорого, музыкальный инструмент старинный, струнные гусли, купить гусли 12 струн, гусли музыка, цена, гусли в Беларуси, России">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Гусли купить, недорого, гусли инструмент, гусли музыкальный, старинный струнный инструмент, гусли из Беларуси, гусли музыка, гусли слушать, играющие гусли, народные гусли.</title>
+	<title>Гусли купить, недорого, гусли из Беларуси, гусли инструмент, гусли музыкальный, старинный струнный инструмент, гусли музыка, гусли слушать, играющие гусли, народные гусли.</title>
 	<link rel="stylesheet" type="text/css" href="./style.css" />
 	<link rel="icon" href="./images/favicon.ico" type="image/x-icon">
 	<meta name="yandex-verification" content="4ff80869fd518da7" />
