feat: compress all photos

--- a/index.html
+++ b/index.html
@@ -84,43 +84,52 @@
 			<a class="next" onclick="rightSlide()">&#10095;</a>
 		</div>
 
-
-
 		<h1 id="textguslivnal">Гусли в наличии:</h1>
 		<div id="available">
 
-
-			<ul class="images images1">
-				<li class="visible"><img src="images/product/1/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/1/2.jpg" alt="Гусли-изображение-3"></li>
-				<!-- <li class="hide"><img src="images/product/1/3.jpg" alt="Гусли-изображение-2"></li> -->
-				<li><h2 class="textproduct">Гусли № 1, 12 струн,<br>цена: 280 BYN (100 USD)</h2></li>
-			</ul>
-
+      <div>
+        <ul class="images images1">
+          <li class="visible"><img src="images/product/1/1.jpg" alt="Гусли-изображение-1"></li>
+          <li><h2 class="textproduct">Гусли № 1, 12 струн,<br>цена: 280 BYN (100 USD)</h2></li>
+          <div class="hidden-photos">
+            <img src="images/product/1/3.jpg" alt="Гусли-изображение-2">
+          </div>
+        </ul>
+      </div>
+			
 
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/2/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/2/2.jpg" alt="Гусли-изображение-2"></li>
-				<li class="hide"><img src="images/product/2/3.jpg" alt="Гусли-изображение-3"></li>
+			
 				<li><h2 class="textproduct">Гусли № 2, 12 струн,<br>цена: 280 BYN (100 USD)</h2></li>
+        <div class="hidden-photos">
+          <img src="images/product/2/2.jpg" alt="Гусли-изображение-2">
+          <img src="images/product/2/3.jpg" alt="Гусли-изображение-3">
+        </div>
 			</ul>
 
 			
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/3/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/3/2.jpg" alt="Гусли-изображение-2"></li>
-				<li class="hide"><img src="images/product/3/3.jpg" alt="Гусли-изображение-3"></li>
+				
 				<li><h2 class="textproduct">Гусли № 3, 11 струн,<br>цена: 280 BYN (100 USD)</h2></li>
+        <div class="hidden-photos">
+          <img src="images/product/3/2.jpg" alt="Гусли-изображение-2">
+				  <img src="images/product/3/3.jpg" alt="Гусли-изображение-3">
+        </div>
 			</ul>
 			
 			
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/4/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/4/2.jpg" alt="Гусли-изображение-2"></li>
-				<li class="hide"><img src="images/product/4/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 4, 12 струн,<br>цена: 280 BYN (100 USD)</h2></li>
-			</ul>
 
+				<li><h2 class="textproduct">Гусли № 4, 12 струн,<br>цена: 280 BYN (100 USD)</h2></li>
+
+        <div class="hidden-photos">
+          <img src="images/product/4/2.jpg" alt="Гусли-изображение-2">
+				  <img src="images/product/4/3.jpg" alt="Гусли-изображение-3">
+        </div>
+			</ul>
 		</div>
 		
 		<div class="video-block">
@@ -180,18 +189,20 @@
 					<ul class="images images2">
 
 						<li class="visible"><img src="./images/review/1.jpg" alt="Гусли-отзыв-1"></li>
-						<li class="hide"><img src="./images/review/2.jpg" alt="Гусли-отзыв-2"></li>
-						<li class="hide"><img src="./images/review/3.jpg" alt="Гусли-отзыв-3"></li>
-						<li class="hide"><img src="./images/review/4.jpg" alt="Гусли-отзыв-4"></li>
-						<li class="hide"><img src="./images/review/5.jpg" alt="Гусли-отзыв-5"></li>
-						<li class="hide"><img src="./images/review/6.jpg" alt="Гусли-отзыв-6"></li>
-						<li class="hide"><img src="./images/review/7.jpg" alt="Гусли-отзыв-7"></li>
-						<li class="hide"><img src="./images/review/8.jpg" alt="Гусли-отзыв-8"></li>
-						<li class="hide"><img src="./images/review/9.jpg" alt="Гусли-отзыв-9"></li>
-						<li class="hide"><img src="./images/review/10.jpg" alt="Гусли-отзыв-10"></li>
-						<li class="hide"><img src="./images/review/11.jpg" alt="Гусли-отзыв-11"></li>
+						
+            <div class="hidden-photos">
+              <img src="./images/review/2.jpg" alt="Гусли-отзыв-2">
+						  <img src="./images/review/3.jpg" alt="Гусли-отзыв-3">
+						  <img src="./images/review/4.jpg" alt="Гусли-отзыв-4">
+						  <img src="./images/review/5.jpg" alt="Гусли-отзыв-5">
+						  <img src="./images/review/6.jpg" alt="Гусли-отзыв-6">
+						  <img src="./images/review/7.jpg" alt="Гусли-отзыв-7">
+						  <img src="./images/review/8.jpg" alt="Гусли-отзыв-8">
+						  <img src="./images/review/9.jpg" alt="Гусли-отзыв-9">
+						  <img src="./images/review/10.jpg" alt="Гусли-отзыв-10">
+						  <img src="./images/review/11.jpg" alt="Гусли-отзыв-11">
+            </div>
 					</ul>
-
 				</div>
 			</div>
 		</div>
