--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 	<header>
 		<nav>
 			<ul class="menu-main">
+				<li><a href="./pages/lira/lira.html">Лиры</a></li>
 				<li><a href="./pages/info/info.html">О гуслях</a></li>
 				<li><a href="#textguslivnal">Гусли в наличии</a></li>
 				<li><a href="#contactsjump">Контакты</a></li>
@@ -64,10 +65,11 @@
 		<a href="#myworks"><img id="upimg" src="images/572.png" alt="Фотогалерея гуслей"> </a>
 
 		<p class="content">Приветствую! Меня зовут Евгений и я занимаюсь изготовлением старинного щипкового музыкального
-			инструмента- Гусли, в Беларуси. Это инструмент, позволяющий извлекать совершенно гармоничные сочетания звуков с возможностью
+			инструмента- <a href="./pages/info/info.html">Гусли</a>, в Беларуси. Это инструмент, позволяющий извлекать совершенно гармоничные сочетания звуков с возможностью
 			заглянуть в далекое прошлое. Мои гусли: это изделия ручной работы, естественный
-			внешний вид, яркое природное звучание. Пишите, звоните. Возможна отправка в другие страны. Условия
-			доставки и оплаты согласовываются индивидуально.</p>
+			внешний вид, яркое природное звучание.Для приобретения инструмента и вопросам свяжитесь со мной по данным <a href="#contactsjump">контактам</a>. Возможна отправка в другие страны. Условия
+			доставки и оплаты согласовываются индивидуально.Также изготавливаю <a href="./pages/lira/lira.html">ЛИРЫ</a>
+		</p>
 		
 		<!-- Slideshow container -->
 		<div id="myworks" class="slideshow-container">
