--- a/pages/info/info.html
+++ b/pages/info/info.html
@@ -67,7 +67,7 @@
     </header>
     <article>
         <div class="content">
-            <img class="content-img" src="../../images/gi-1.png" alt="изображение">
+            <img class="content-img" src="../../images/gi-1.png" alt="изображение гуслей">
             Гусли- древний по происхождению струнный музыкальный инструмент, который с
             древних времен славился своим чарующим звучанием.</br></br> При игре обычно
             инструмент находится на коленях, щипковым методом двух рук извлекаются
