--- a/pages/infolira/infolira.html
+++ b/pages/infolira/infolira.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Гусли- старинный по происхождению струнный музыкальный инструмент, который славится своим чарующим звучанием. Какие гусли есть, гусли музыкальный инструмент, музыка гусли играющие народные."
+      content="Одним из популярных видов средневековой лиры является Kravik Lyre (Кравик-Лира)."
     />
     <meta
       name="keywords"
-      content="гусли крыловидные древний старинный щипковый музыкальный струнный инструмент музыка играющие народные"
+      content="лиры лира Kravik Lyre Кравик-Лира древний  старинный щипковый музыкальный струнный инструмент"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Гусли инструмент-это один из самых старейших интересных народных
-      инструментов. Гусли музыкальный старинный струнный народный инструмент,
-      музыка гуслей.
+      Kravik Lyre (Кравик-Лира) музыкальный инструмент Лира
     </title>
     <link rel="stylesheet" type="text/css" href="./infolira.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
