--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -100,7 +100,7 @@
     <main>
       <p class="content">
         Приветствую! Меня зовут Евгений и я занимаюсь изготовлением древнего
-        музыкального инструмента- <a href="../infolira/infolira.html">Лира</a>, Kravik Lyre. Это щипковый инструмент,
+        музыкального инструмента- <a href="../infolira/infolira.html">Лира</a>, Kravik Lyre (Кравик-Лира). Это щипковый инструмент,
         позволяющий проникнуться атмосферой древности, своим  чарующим звучанием и внешним видом. Для
         приобретения инструмента и вопросам свяжитесь со мной по данным
         <a href="#contactsjump">контактам</a>. Возможна отправка в другие
