add page en-lang

--- a/pages/info/info.html
+++ b/pages/info/info.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Гусли- старинный по происхождению струнный музыкальный инструмент, который славится своим чарующим звучанием. Какие гусли есть, гусли музыкальный инструмент, музыка гусли играющие народные."
+      content="Гусли- старинный по происхождению струнный музыкальный инструмент, который славится своим чарующим звучанием. Какие гусли есть, гусли музыкальный инструмент, музыка гусли играющие народные, кокле, каннель, кантеле."
     />
     <meta
       name="keywords"
-      content="гусли крыловидные древний старинный щипковый музыкальный струнный инструмент музыка играющие народные"
+      content="гусли крыловидные древний старинный щипковый музыкальный струнный инструмент музыка играющие народные  кокле каннель кантеле канклес"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Гусли инструмент-это один из самых старейших интересных народных инструментов. Гусли музыкальный старинный струнный народный инструмент, музыка гуслей.</title>
+    <title>Гусли инструмент-это один из самых старейших интересных народных инструментов. Гусли музыкальный старинный струнный народный инструмент, музыка гуслей, кокле, каннель, кантеле, канклес</title>
     <link rel="stylesheet" type="text/css" href="./info.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
     <meta name="yandex-verification" content="4ff80869fd518da7" />
