--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -110,14 +110,13 @@
 
       <h1 id="textvnal">Лиры в наличии:</h1>
       <div id="available">
-        <div>
           <ul class="images images1">
             <li class="visible">
               <img src="../../images/lira/1/1.jpg" alt="Лира-изображение-1" />
             </li>
             <li>
               <h2 class="textproduct">
-                Лира Кравик / Kravik Lyre №1, 7 струн,<br />цена: 435 BYN (150
+                Лира Кравик / Kravik Lyre №1, 7 струн,<br />цена: 450 BYN (150
                 USD)
               </h2>
             </li>
@@ -127,7 +126,6 @@
               <img src="../../images/lira/1/4.jpg" alt="Лира-изображение-4" />
             </div>
           </ul>
-        </div>
 
         <ul class="images images1">
           <li class="visible">
@@ -136,7 +134,7 @@
 
           <li>
             <h2 class="textproduct">
-              Лира Кравик / Kravik Lyre №2, 7 струн,<br />цена: 435 BYN (150
+              Лира Кравик / Kravik Lyre №2, 7 струн,<br />цена: 450 BYN (150
               USD)
             </h2>
           </li>
@@ -208,11 +206,15 @@
         </div>
       </div>
 
+      <div class="div-language">Language: <span class="span-active-lang">ru</span>
+        <a href="../en/en.html">en</a>
+      </div>
+
       <div class="footer-date">Copyright © 2023</div>
     </footer>
 
     <link href="../../viewer/viewer.min.css" rel="stylesheet" />
-    <script defer src="../../viewer/viewer.min.js"></script>
     <script defer src="lira.js"></script>
+    <script defer src="../../viewer/viewer.min.js"></script>
   </body>
 </html>
