--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     />
     <meta
       name="keywords"
-      content="гусли, крыловидные, кантеле, 11 струн, недорого, музыкальный инструмент старинный, струнные гусли, купить гусли 12 струн, гусли музыка, цена, гусли в Беларуси, России"
+      content="гусли, крыловидные, кантеле, 11 струн, недорого, музыкальный инструмент старинный, струнные гусли, купить гусли 12 струн, гусли музыка, цена, гусли в Беларуси, России, кокле, каннель, кантеле, канклес"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Гусли купить, недорого, гусли из Беларуси, гусли инструмент, гусли
+      Гусли купить, недорого, гусли из Беларуси, гусли инструмент, кокле, каннель, кантеле, канклес, гусли
       музыкальный, старинный струнный инструмент, гусли музыка, гусли слушать,
       играющие гусли, народные гусли.
     </title>
@@ -139,7 +139,7 @@
 
       <h1 id="textguslivnal">Гусли в наличии:</h1>
       <div id="available">
-        <div>
+  
           <ul class="images images1">
             <li class="visible">
               <img src="images/product/1/1.jpg" alt="Гусли-изображение-1" />
@@ -153,7 +153,6 @@
               <img src="images/product/1/2.jpg" alt="Гусли-изображение-2" />
             </div>
           </ul>
-        </div>
 
         <ul class="images images1">
           <li class="visible">
@@ -340,6 +339,10 @@
             </ul>
           </div>
         </div>
+      </div>
+
+      <div class="div-language">Language: <span class="span-active-lang">ru</span>
+        <a href="./pages/en/en.html">en</a>
       </div>
 
       <div class="footer-date">Copyright © 2023</div>
