add meta microsoft

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       name="google-site-verification"
       content="jnsFx6nk18DhrgKxMlAOeiikxU6iXY-E2Ejbr3YdxCI"
     />
+    <meta name="msvalidate.01" content="8B7B49C8CDE151A36797D8B736992F10" />
 
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
