--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </li>
             <li>
               <h2 class="textproduct">
-                Гусли № 1, 12 струн,<br />цена: 300 BYN (100 USD)
+                Гусли № 1, 12 струн,<br />цена: 300 BYN
               </h2>
             </li>
             <div class="hidden-photos">
@@ -162,7 +162,7 @@
 
           <li>
             <h2 class="textproduct">
-              Гусли № 2, 12 струн,<br />цена: 300 BYN (100 USD)
+              Гусли № 2, 12 струн,<br />цена: 300 BYN
             </h2>
           </li>
           <div class="hidden-photos">
@@ -178,7 +178,7 @@
 
           <li>
             <h2 class="textproduct">
-              Гусли № 3, 11 струн,<br />цена: 300 BYN (100 USD)
+              Гусли № 3, 11 струн,<br />цена: 300 BYN
             </h2>
           </li>
           <div class="hidden-photos">
@@ -194,7 +194,7 @@
 
           <li>
             <h2 class="textproduct">
-              Гусли № 4, 12 струн,<br />цена: 300 BYN (100 USD)
+              Гусли № 4, 12 струн,<br />цена: 300 BYN
             </h2>
           </li>
 
@@ -211,7 +211,7 @@
 
           <li>
             <h2 class="textproduct">
-              Гусли № 5, 11 струн,<br />цена: 300 BYN (100 USD)
+              Гусли № 5, 11 струн,<br />цена: 300 BYN
             </h2>
           </li>
 
@@ -229,7 +229,7 @@
 
           <li>
             <h2 class="textproduct">
-              Гусли № 6, 11 струн,<br />цена: 300 BYN (100 USD)
+              Гусли № 6, 11 струн,<br />цена: 300 BYN
             </h2>
           </li>
 
