--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -117,8 +117,7 @@
             </li>
             <li>
               <h2 class="textproduct">
-                Лира Кравик / Kravik Lyre №1, 7 струн,<br />цена: 450 BYN (150
-                USD)
+                Лира Кравик / Kravik Lyre №1, 7 струн,<br />цена: 450 BYN
               </h2>
             </li>
             <div class="hidden-photos">
@@ -135,8 +134,7 @@
 
           <li>
             <h2 class="textproduct">
-              Лира Кравик / Kravik Lyre №2, 7 струн,<br />цена: 450 BYN (150
-              USD)
+              Лира Кравик / Kravik Lyre №2, 7 струн,<br />цена: 450 BYN
             </h2>
           </li>
           <div class="hidden-photos">
